<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/main_activity_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logo_main"
        android:textAlignment="center"
        app:layout_constraintHeight_percent="0.3"
        android:textSize="55dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/main_activity_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/main_activity_logo"
        android:hint="@string/hint_email"
        android:padding="10dp"
        />
    <EditText
        android:id="@+id/main_activity_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/main_activity_email"
        android:hint="@string/hint_password"
        android:padding="10dp"
        />
    <Button
        android:id="@+id/main_activity_btn_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonMain"
        app:layout_constraintTop_toBottomOf="@id/main_activity_password"
        android:text="@string/btn_signin"
        />



</androidx.constraintlayout.widget.ConstraintLayout>