<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/create_text_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_place"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/create_name_new_place"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/create_text_logo"
        android:hint="@string/place_name"/>

    <EditText
        android:id="@+id/create_description_new_place"
        android:layout_width="match_parent"
        android:minHeight="50dp"
        android:ems="10"
        android:gravity="start|top"
        android:padding="5dp"
        android:inputType="textMultiLine"
        android:hint="@string/text_description"
        app:layout_constraintTop_toBottomOf="@id/create_name_new_place"
        android:layout_height="0dp" />

    <RatingBar
        android:id="@+id/create_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FDFDFD"
        android:max="5"
        android:rating="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_description_new_place" />

    <fragment
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        app:layout_constraintBottom_toTopOf="@id/create_btn_new_place"
        app:layout_constraintTop_toBottomOf="@id/create_rating"
        />


    <Button
        android:id="@+id/create_btn_new_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonMain"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/create_new_place_btn_text"
        app:layout_constraintTop_toBottomOf="@id/map"
        android:enabled="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>